--- a/client/src/components/Master/index.css
+++ b/client/src/components/Master/index.css
@@ -15,20 +15,35 @@
   text-align: center;
 }
 
-.form-container {
+.form-list-container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
   width: 100%;
+  background-color: #f6f6f6;
+}
+
+.form-container {
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  height: 100vh;
+}
+
+.question-form-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .question-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 30%;
+  width: 40%;
   margin-bottom: 30px;
 }
 
@@ -57,14 +72,70 @@
 .create-button {
   font-family: 'Roboto';
   font-weight: 600;
-  font-size: 10px;
+  font-size: 12px;
   padding: 8px 16px;
-  /* color: #ffffff; */
   background-image: linear-gradient(to right, #13add5, #82c341, #13add5);
   border: none;
   border-radius: 4px;
   cursor: pointer;
   outline: none;
+}
+
+.question-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100vh;
+  overflow: auto;
+  background-color: #fff;
+}
+
+.list {
+  text-align: start;
+  width: 100%;
+}
+
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.question {
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.remove-btn {
+  border: none;
+  outline: none;
+  height: 25px;
+  width: 25px;
+  padding: 0;
+  background-color: transparent;
+  margin-right: 20px;
+}
+
+.delete-icon {
+  height: 20px;
+  width: 20px;
+}
+
+.submit-question-button {
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 12px;
+  padding: 8px 16px;
+  width: 100px;
+  background-image: linear-gradient(to right, #13add5, #82c341, #13add5);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  align-self: center;
+  margin-bottom: 20px;
 }
 
 @media screen and (max-width: 767px) {
