--- a/client/src/components/Master/index.css
+++ b/client/src/components/Master/index.css
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  /* justify-content: center; */
+  min-height: 100%;
   align-items: center;
   background-color: #f6f6f6;
-  padding: 20px;
 }
 
 .master-heading {
@@ -79,6 +78,7 @@
   border-radius: 4px;
   cursor: pointer;
   outline: none;
+  height: 40px;
 }
 
 .question-list {
@@ -88,6 +88,8 @@
   max-height: 100vh;
   overflow: auto;
   background-color: #fff;
+  margin: 0;
+  /* padding-left: 0; */
 }
 
 .list {
@@ -135,11 +137,39 @@
   cursor: pointer;
   outline: none;
   align-self: center;
-  margin-bottom: 20px;
+  margin: 20px;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around;
+  align-items: center; */
 }
 
 @media screen and (max-width: 767px) {
+  .master-container {
+    height: 100%;
+  }
+
   .question-container {
     width: 60%;
+  }
+
+  .form-list-container {
+    flex-direction: column;
+  }
+
+  .form-container {
+    width: 100%;
+    height: 50vh;
+  }
+
+  .question-form-container {
+    width: 100%;
+  }
+
+  .question {
+    font-size: 18px;
   }
 }
