--- a/client/src/components/Student/index.css
+++ b/client/src/components/Student/index.css
@@ -1,3 +1,99 @@
+.student-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
 .student-heading {
   text-align: center;
+}
+
+.student-sub-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 70vh;
+}
+
+.welcome-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+.activity-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: space-between; */
+  height: 100vh;
+  width: 50%;
+  background-color: #f6f6f6;
+}
+
+.student-question-container {
+}
+
+.question {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.answer-input {
+  padding-left: 5px;
+  font-family: 'Roboto';
+  font-size: 18px;
+  height: 32px;
+  width: 250px;
+  margin-top: 5px;
+}
+
+.activities-btn {
+  display: flex;
+  top: 50px;
+  right: 20px;
+  font-size: 24px;
+  position: fixed;
+  border: none;
+  background-color: transparent;
+  outline: none;
+}
+
+.activity-log {
+  margin-left: 7px;
+}
+
+.submit-answers-button {
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 12px;
+  padding: 8px 16px;
+  width: 100px;
+  background-image: linear-gradient(to right, #13add5, #82c341, #13add5);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  align-self: center;
+  margin: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .student-sub-container {
+    flex-direction: column;
+  }
+
+  .welcome-container {
+    width: 100%;
+  }
+
+  .activity-container {
+    width: 100%;
+  }
 }
