--- a/client/src/components/Master/index.css
+++ b/client/src/components/Master/index.css
@@ -22,6 +22,16 @@
   background-color: #f6f6f6;
 }
 
+.answers-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: #f6f6f6;
+}
+
 .form-container {
   width: 50%;
   display: flex;
