--- a/client/src/components/Student/index.css
+++ b/client/src/components/Student/index.css
@@ -9,6 +9,23 @@
 
 .student-heading {
   text-align: center;
+  font-family: 'Roboto';
+  font-weight: 600;
+  font-size: 32px;
+}
+
+.name-label-text {
+  font-family: 'Roboto';
+  font-size: 18px;
+}
+
+.name-input {
+  padding-left: 5px;
+  font-family: 'Roboto';
+  font-size: 16px;
+  height: 24px;
+  width: 250px;
+  margin-left: 10px;
 }
 
 .student-sub-container {
